manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trinity-apis
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: trinity-apis
    spec:
      containers:
      - name: trinity-apis
        # image: 00000000000000.dkr.ecr.my-region.amazonaws.com/example-eks:tag
        # image: REGISTRY/REPO:TAG
        # The full image will be dynamically added by Kustomize in the workflow.
        image: trinity
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
