manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: aws-sample-trinity
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: aws-sample-trinity
